# arc-devcontainers

./: README.md
.github/workflows/: test-pr.yaml
src/azure-container-apps-java/: .editorconfig  Makefile  NOTES.md  README.md  devcontainer-template.json
src/azure-container-apps-java/.devcontainer/: Dockerfile  devcontainer.json
src/color/: README.md
src/databricks/: .pre-commit-config.yaml  Makefile  NOTES.md  README.md  databricks.yml  devcontainer-template.json  pyproject.toml
src/databricks-streamlit/: Makefile  NOTES.md  README.md  databricks.yml  devcontainer-template.json  pyproject.toml
src/databricks-streamlit/.devcontainer/: Dockerfile  devcontainer.json
src/databricks/.devcontainer/: Dockerfile  devcontainer.json
src/fabric-data-engineering/: .editorconfig  Makefile  NOTES.md  devcontainer-template.json  pyproject.toml
src/fabric-data-engineering/.devcontainer/: Dockerfile  devcontainer.json
src/hello/: README.md
src/terraform/: .pre-commit-config.yaml  .terraform-docs-root.yml  .tflint.hcl  Makefile  NOTES.md  README.md  devcontainer-template.json
src/terraform/.devcontainer/: Dockerfile  devcontainer.json
test/azure-container-apps-java/: test.sh
test/databricks/: test.sh
test/databricks-streamlit/: test.sh
test/fabric-data-engineering/: test.sh
test/terraform/: test.sh
